WebStore/src/objects/OrderSale__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Info__c</fullName>
        <label>Customer Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OdrerNumber__c</fullName>
        <displayFormat>{YYYY}{MM}-{00000}</displayFormat>
        <label>OdrerNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Changed</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>OrderSale</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OrderSale Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrderSales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>